--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,3 @@
-services:
-  # A Docker web service
-  - type: web
-    name: Video-Encoder-BOT
-    env: python
-    startCommand: python3 -m VideoEncoder
-    buildCommand: pip3 install -U -r requirements.txt
-    repo: https://github.com/erotixe/Video-Encoder-BOT.git # optional
-    region: oregon # optional (defaults to oregon)
-    plan: free # optional (defaults to starter)
-    branch: beta # optional (defaults to master)
-    numInstances: 1 # optional (defaults to 1)
-    healthCheckPath: /
+IT WONT WORK RAM WILL BE FULL 
 
-#End of yaml
+IF PREMIUM USE DIRECT DOCKER
