--- a/config.env
+++ b/config.env
@@ -1,18 +1,18 @@
-API_ID = 29483517 # https://my.telegram.org
-API_HASH = "e35a05d338376cbcd8162f810aed878d" # https://my.telegram.org
-BOT_TOKEN = "8521163364:AAENlcMEdE1dL-iPVhkzdROkI14CEDwWW4M"
+API_ID =# https://my.telegram.org
+API_HASH = "d" # https://my.telegram.org
+BOT_TOKEN = ""
 
 # Authorization # - List of id's, separated by space -
 OWNER_ID = 5756495153
 SUDO_USERS = "5756495153 5741918628"
-EVERYONE_CHATS = "-1002819384532"
+EVERYONE_CHATS = ""
 
 # Log Channel #
 LOG_CHANNEL = "-1002741915396"
 
 # Database #
 SESSION_NAME = "abhiencoderbot"
-MONGO_URI = "mongodb+srv://user1:abhinai.2244@cluster0.7oaqx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI = "m"
 
 # Google Drive #
 INDEX_URL = ""
